SGFD-16832 Checkout / Style improvement - wrapping delivery info title FIX

--- a/src/Volo/FrontendBundle/Resources/public/css/pages/checkout.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/pages/checkout.scss
@@ -142,16 +142,29 @@
 }
 
 .checkout__delivery_information {
-  @include make-row();
+  @include make-row(0);
+}
+
+.checkout__delivery_information__address {
+  .checkout__subtitle {
+    text-align: left;
+  }
+  @include make-xs-column(6, 0);
 }
 
 .checkout__delivery_information__time {
   @include make-xs-column(6, 0);
+  .checkout__subtitle {
+    text-align: left;
+  }
+  @include respond-from("screen-md") {
+    .checkout__subtitle,
+    .checkout__item {
+      padding-left: 5px;
+    }
+  }
 }
 
-.checkout__delivery_information__address {
-  @include make-xs-column(6);
-}
 // main fields
 
 .checkout__time-field {
